--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "vue-template-babel-compiler": "^1.1.2"
     },
     "dependencies": {
         "moment": "^2.29.1",
