--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "sass": "^1.43.4",
         "sass-loader": "^12.3.0",
         "vue": "^2.6.14",
+        "vue-croppie": "^2.0.2",
         "vue-loader": "^15.9.8",
         "vue-router": "^3.5.3",
         "vue-template-compiler": "^2.6.14",
