--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/js/manifest.js": "/js/manifest.js",
-    "/js/vendor.js": "/js/vendor.js"
+    "/js/app.js": "/js/app.js?id=7eede0455fafe8651a8d",
+    "/js/manifest.js": "/js/manifest.js?id=c9cc9495fc0d0837ead2",
+    "/js/vendor.js": "/js/vendor.js?id=c1e1957c67cdf9a4cf07"
 }
