--- a/public/web.config
+++ b/public/web.config
@@ -25,4 +25,7 @@
       </rules>
     </rewrite>
   </system.webServer>
+    <system.web>
+        <identity impersonate="false" />
+    </system.web>
 </configuration>
