--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
+        "laravel-echo": "^1.11.4",
         "moment": "^2.29.1",
+        "pusher-js": "^4.3.1",
         "sass": "^1.43.4",
         "sass-loader": "^12.3.0",
         "vue": "^2.6.14",
