--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,17 @@
     "require": {
         "php": "^7.3|^8.0",
         "beyondcode/laravel-websockets": "^1.13",
+        "doctrine/dbal": "^3.3",
+        "fideloper/proxy": "4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.5",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
+        "laravel/socialite": "5.2",
         "laravel/tinker": "^2.5",
-        "pusher/pusher-php-server": "~3.0"
+        "pusher/pusher-php-server": "~3.0",
+        "socialiteproviders/google": "^4.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
