--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
+        "html2canvas": "^1.4.1",
         "laravel-echo": "^1.11.4",
         "moment": "^2.29.1",
         "pusher-js": "^4.3.1",
         "sass": "^1.43.4",
         "sass-loader": "^12.3.0",
         "vue": "^2.6.14",
+        "vue-axios": "^3.4.1",
         "vue-croppie": "^2.0.2",
+        "vue-html2canvas": "0.0.4",
         "vue-loader": "^15.9.8",
         "vue-router": "^3.5.3",
+        "vue-social-auth": "^1.4.9",
         "vue-template-compiler": "^2.6.14",
         "vuetify": "^2.6.0",
         "vuex": "^3.6.2"
